@@ -5885,6 +5885,10 @@ PACKAGE: 2.2.99.2
 2006-12-05 cjg
  * Sort rendering for reset_password
 
+2006-12-05 cjg
+ * Fixed bug with messages and GDOME. (hopefully also fixed for LibXML, but
+    not tested)
+
 ======================================================================
 05/12/2006 - EPRINTS-3.0-beta-3
 ======================================================================
